@startuml
class Roadmap {
    width : int
    height : int
    title : Title
    timeline : Timeline
    groups : List[Group]
    footer : Footer
    -__init__(width, height, title, timeline, groups, footer)
}

class Title {
    text : str
    x : int
    y : int
    width : int
    height : int
    font : str
    font_size : int
    font_color : str
}

class Footer {
    text : str
    x : int
    y : int
    width : int
    height : int
    font : str
    font_size : int
    font_color : str
}

class Timeline {
    mode : str
    start : datetime
    item : int
    x : int
    y : int
    width : int
    height : int
    font : str
    font_size : int
    font_color : str
    fill_color : str
}

class TimelineItem {
    text : str
    start : datetime
    end : datetime
    x : int
    y : int
    width : int
    height : int
    group : Group
}

class Group {
    text : str
    x : int
    y : int
    width : int
    height : int
    font : str
    font_size : int
    font_color : str
    fill_color : str
    tasks : List[Task]
}

class Task {
    text : str
    color : str
    start : datetime
    end : datetime
    x : int
    y : int
    width : int
    height : int
    font : str
    font_size : int
    font_color : str
    fill_color : str
    milestones : List[Milestone]
}

class Milestone {
    x : int
    y : int
    width : int
    height : int
    date : datetime
    font : str
    font_size : int
    font_color : str
    fill_color : str
}

class Generator {
    -roadmap : Roadmap
    -painter : Painter
    -__init__(roadmap : Roadmap)
    +generate() 
}

class Painter {
    + draw_box()
    + draw_text()
    + draw_diamond()
    + set_colour()
    + set_font()
}

class PyCairo 

Roadmap *-- Title
Roadmap *-- Timeline
Roadmap *-- Group
Roadmap *-- Footer

Timeline *-- TimelineItem
Generator *-- Roadmap
Generator *-- Painter

Painter *-- PyCairo

Group *-- Task
Task *-- Milestone



@enduml